--- a/style.css
+++ b/style.css
@@ -118,12 +118,12 @@ li > label {
 li >    input[type="text"] {
     width: 226px;
 }
-button.delete img {
+.delete-btn__img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.delete-btn__img:hover {
     transform: rotateZ(0);
 }
 
