--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@
 }
 .add-element__row-wrapper {
     display: flex;
+    padding-top: 20px;
 }
 ul {
     margin: 0;
@@ -57,8 +58,7 @@ button:hover {
     color: #3a3A3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.heading {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -84,11 +84,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="new-task"] {
-    display: block;
-    margin: 0 0 20px;
-}
-input#new-task {
+.row-wrapper__task-text {
     width: 318px;
 }
 
@@ -128,7 +124,7 @@ li >    input[type="text"] {
 }
 
 /* Completed */
-ul#completed-tasks label {
+.completed-tasks__task {
     text-decoration: line-through;
     color: #888;
 }
