--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
 /* Basic Style */
+ul {
+    margin: 0;
+    padding: 0px;
+}
+li, h3 {
+    list-style: none;
+}
+input,button{
+    outline: none;
+}
+
 .body {
     background-color: #f8f8f8;
     color: #333;
@@ -26,7 +37,7 @@
     width: 500px;
     margin: 0 auto 0;
 }
-.task-text {
+.task-name, .task-text {
     width: 56%;
     display: inline-block;
     flex-grow: 1
@@ -35,17 +46,8 @@
     display: flex;
     padding-top: 20px;
 }
-ul {
-    margin: 0;
-    padding: 0px;
-}
-li, h3 {
-    list-style: none;
-}
-input,button{
-    outline: none;
-}
-button {
+
+.btn {
     background: none;
     border: 0px;
     color: #888;
@@ -54,7 +56,7 @@ button {
     font-family: Lato, sans-serif;
     cursor: pointer;
 }
-button:hover {
+.btn:hover {
     color: #3a3A3a;
 }
 /* Heading */
@@ -67,7 +69,7 @@ button:hover {
     margin: 0;
     text-transform: uppercase;
 }
-input[type="text"] {
+.task-text {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -79,7 +81,7 @@ input[type="text"] {
     font-family: Lato, sans-serif;
     color: #888;
 }
-input[type="text"]:focus {
+.task-text:focus {
     color: #333;
 }
 
@@ -89,7 +91,7 @@ input[type="text"]:focus {
 }
 
 /* Task list */
-li {
+.incomplite-tasks__task,.completed-tasks__task {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
@@ -98,20 +100,20 @@ li {
     justify-content: space-between;
     align-items: center;
 }
-li > * {
+/* li > * {
     vertical-align: middle;
-}
+} */
 
-li > input[type="checkbox"] {
+.task-checkbox {
     margin: 0 10px;
 }
-li > label {
+.task__task-name {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
-li >    input[type="text"] {
+.task__task-text {
     width: 226px;
 }
 .delete-btn__img {
@@ -124,21 +126,21 @@ li >    input[type="text"] {
 }
 
 /* Completed */
-.completed-tasks__task {
+.completed-tasks__task .task__task-name{
     text-decoration: line-through;
     color: #888;
 }
 
-/* Edit Task */
-ul li input[type=text] {
-    display:none;
+
+.task__task-text {
+    display: none;
 }
 
-ul li.edit-mode input[type=text] {
-    display:inline-block;
-    width:224px;
+.edit-mode .task-text {
+    display: inline-block;
+    width: 224px;
 }
 
-ul li.edit-mode label {
-    display:none;
+.edit-mode .task-name {
+    display: none;
 }
