refactor: add missing semicolon according to rule 3.7 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ button{
 .task-text {
     width: 56%;
     display: inline-block;
-    flex-grow: 1
+    flex-grow: 1;
 }
 .add-element__row-wrapper {
     display: flex;
